# revdi

./: .gitignore  Cargo.toml  Makefile  README.md
LICENSES/: LGPL-2.1
chimera/: Cargo.toml  README.md  build.rs
chimera/fixtures/: coldref-cands.txt  coldref-out-cp.hex  colour-strips.txt
chimera/src/: edid_fetch.rs  kshim.rs  kvino.rs  lib.rs  prove.rs  revdi.rs
chimera/vino/: ake.rs  cp.rs  hdcp.rs  proto.rs  video.rs
docs/: DESIGN.md
kernel-shim/: Cargo.toml
kernel-shim/src/: lib.rs
module/: Kbuild  Makefile  ddcci.rs  evdi.rs  ioctl.rs  kms.rs  painter.rs  uapi.rs
scripts/: sync-kernel-sources.sh
vino-driver/: Cargo.toml
vino-driver/src/: frame.rs  hdcp_msgs.rs  lib.rs  usb.rs
vino-hdcp/: Cargo.toml
vino-hdcp/src/: cert.rs  kdf.rs  lib.rs  messages.rs
