[package]
name = "vino-driver"
version = "0.0.1"
edition = "2021"
license = "GPL-2.0-or-later"
description = "DisplayLink DL3 driver: USB transport + HDCP 2.2 + control plane"

# rusb (safe bindings over the libusb-1.0 C library) so these tools drive the
# dock through the *same libusb DLM uses* — run with cwd /opt/displaylink or
# LD_LIBRARY_PATH=/opt/displaylink to load DLM's bundled libusb-1.0.so.0.3.0.
[dependencies]
rusb = "0.9.4"
libc = "0.2"
vino-hdcp = { path = "../vino-hdcp" }
rand = "0.8"
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
sha1 = "0.10"
sha2 = "0.10"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"

[[bin]]
name = "vino-bringup"
path = "src/bin/bringup.rs"

[[bin]]
name = "vino-sniff"
path = "src/bin/sniff.rs"
