[package]
name = "vino-hdcp"
version = "0.0.1"
edition = "2021"
license = "GPL-2.0-or-later"
description = "HDCP 2.2 transmitter-side AKE/LC/SKE state machine for DL3 driver"

[dependencies]
aes = "0.8"
ctr = "0.9"
cbc = "0.1"
cipher = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
num-bigint-dig = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = "1"
thiserror = "1"
